--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,8 +5,19 @@
          padding-right: -65px;
     }
     
+     
+    &--gutters-large{
+         padding-right: -100px;
+    }
+    
+    
     &--gutters > div{
         padding-right: 65px;
+    
+    }
+    
+     &--gutters-large > div{
+        padding-right: 100px;
     
     }
     
@@ -26,6 +37,12 @@
         &__medium-4--larger{
             width: 37%;
                 
+        }
+        
+        
+        &__medium-6{
+            float: left;
+            width: 50%;
         }
     
     &__medium-8{    
