--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -10,6 +10,9 @@
 @import "modules/_row";
 @import "modules/_generic-content-container";
 
+@import "modules/_section-title";
+@import "modules/_feature-item";
+
 
 
 
