--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -1,12 +1,34 @@
-.page-section{
-     padding: 1.2rem 0;
-    @mixin atMedium{
-       padding: 4.5rem 0;  
+.page-section {
+    padding: 1.2rem 0;
+
+    @mixin atMedium {
+        padding: 4.5rem 0;
     }
-   
-    
-    &--blue{
+
+
+    &--no-b-padding-until-medium {
+        padding-bottom: 0;
+
+
+        @mixin atMedium {
+            padding-bottom: 4.5rem;
+        }
+    }
+
+  
+    &--blue {
         background-color: $mainBlue;
         color: white;
+    }
+
+    &--testimonials {
+
+        background-color: #e0e6ef;
+
+        @mixin atLarge {
+            background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+            background-size: cover;
+        }
+
     }
 }
