--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -3,6 +3,8 @@
     font-weight: 300;
     text-align: center;
     
+    
+    
     @mixin atSmall{
         font-size: 3.75rem;  
     }
@@ -12,6 +14,8 @@
     
     
     &__icon{
+        position: relative;
+        top: 8px;
         margin-right: .5rem;
         display: block;
         margin-left: auto;
@@ -24,5 +28,9 @@
             display: inline-block;
             margin-bottom: 0;
         }
+    }
+    
+    &--blue{
+        color: $mainBlue;
     }
 }
