--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,10 +9,11 @@
 @import "modules/_headline";
 @import "modules/_row";
 @import "modules/_generic-content-container";
-
 @import "modules/_section-title";
 @import "modules/_feature-item";
 @import "modules/_testimonial";
+@import "modules/_sprites";
+
 
 
 
