--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,52 +1,59 @@
-.large-hero{
+.large-hero {
     position: relative;
-    border-bottom: 10px solid $mainBlue;    
-    
-    
-    &__image{
+    border-bottom: 10px solid $mainBlue;
+
+
+    &__image {
         display: block;
     }
-&__text-content{
 
-    position: absolute;
-    top:50%;
-    transform: translateY(-50%);
-    left: 0;
-    width: 100%;
-    text-align: center;
-}
+    &__text-content {
 
-&__title{
-    font-weight: 300;
-    color: $mainBlue;
-    margin: 0;
-    font-size: 2.4rem;
-    
-    @mixin atSmall{
-        font-size: 4.8rem;
-    }
+        padding-top: 88px;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        width: 100%;
+        text-align: center;
+        
+        @mixin atMedium{
+              padding-top: 60px;
+        }
     }
 
-&__subtitle{
-    font-weight: 300;
-    color: $mainBlue;
-    font-size: 1.5rem;
-    
-     @mixin atSmall {
-        font-size: 2.9em;
+    &__title {
+        font-weight: 300;
+        color: $mainBlue;
+        margin: 0;
+        font-size: 2.4rem;
+
+        @mixin atSmall {
+            font-size: 4.8rem;
+        }
     }
-}
-    &__description{
+
+    &__subtitle {
+        font-weight: 300;
+        color: $mainBlue;
+        font-size: 1.5rem;
+
+        @mixin atSmall {
+            font-size: 2.9em;
+        }
+    }
+
+    &__description {
         color: white;
         font-size: 1.1rem;
         font-weight: 100;
-        text-shadow: 2px 2px 0 rgba(0,0,0,0.1);
+        text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
-        
-       @mixin atSmall {
-  font-size: 1.875rem;
-   }
+
+        @mixin atSmall {
+            font-size: 1.875rem;
+        }
     }
 }
