--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,6 +15,8 @@
 @import "modules/_sprites";
 
 @import "modules/_site-footer";
+@import "modules/_site-header";
+@import "modules/_primary-nav";
 
 
 
