--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,6 +1,10 @@
 .primary-nav{
     &--pull-right{
-        float: right;
+        
+        @mixin atMedium{
+          float: right;  
+        }
+        
     }
     
     ul{
@@ -12,8 +16,22 @@
     
     li{
         list-style: none;
-        float: left;
-        padding-right: 20px;
+        display: inline-block;
+        padding-right: 7px;
+        
+        @mixin atMedium{
+            padding-right: 20px;
+            float: left;
+            display: block;
+        }
+    }
+    
+    li:last-child{
+        padding-right: 0px;
+        
+        @mixin atMedium{
+            padding-right: 20px;
+        }
     }
     
     a{
