--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,53 +1,81 @@
-.site-header{
+.site-header {
     padding: 10px;
     position: absolute;
     z-index: 2;
-    @mixin atMedium{
-        background-color: rgba($mainBlue,.3);
-    }
     width: 100%;
-    
-    &__btn-container{
-        float: right;
+    transition: background-color 0.3s ease-out;
+
+    &--is-expanded {
+        background-color: rgba($mainBlue, 0.55);
     }
-    
-    &__logo{
+
+
+    @mixin atMedium {
+        background-color: rgba($mainBlue..3);
+    }
+
+
+    &__btn-container {
+
+        @mixin atMedium {
+            float: right;
+        }
+
+    }
+
+    &__logo {
         position: absolute;
         z-index: 2;
-    background-color: rgba($mainBlue,.95);
+        background-color: rgba($mainBlue, .95);
         padding: 20px;
         top: 0;
         left: 50%;
         transform: translateX(-50%) scale(0.8);
         transform-origin: 50% 0;
-        
-        @mixin atMedium{
-            
-             left: auto;
-        transform: translateX(0);
+
+        @mixin atMedium {
+
+            left: auto;
+            transform: translateX(0);
         }
     }
-    
-    
-   
-    &__menu-content{
-        display: none;
-        
-        @mixin atMedium{
-            display: block;
+
+
+
+    &__menu-content {
+        opacity: 0;
+        transform: scale(1.2);
+        padding-top: 100px;
+        text-align: center;
+        transition: all 0.3s ease-out;
+        z-index: -10px;
+        position: relative;
+
+
+        @mixin atMedium {
+            opacity: 1;
+            z-index: 1;
+            padding-top: 0px;
+            transform: scale(1);
+        }
+
+        &-is-visible {
+            opacity: 1;
+            z-index: 1;
+            transform: scale(1);
         }
     }
-    
-     &__menu-icon{
+
+
+    &__menu-icon {
         width: 20px;
         height: 20px;
         background-color: white;
         position: absolute;
         top: 10px;
         right: 10px;
-    
-        
-        @mixin atMedium{
+
+        @mixin atMedium {
             display: none;
         }
     }
